refactor: 重構使用者資訊

--- a/John.html
+++ b/John.html
@@ -170,15 +170,15 @@
     <div class="container">
         <div class="header">
             <div class="full-name">
-                <span class="first-name">John</span>
-                <span class="last-name">Doe</span>
+                <span class="first-name">Anthony</span>
+                <span class="last-name">Liu</span>
             </div>
             <div class="contact-info">
                 <span class="email">Email: </span>
                 <span class="email-val">john.doe@gmail.com</span>
                 <span class="separator"></span>
                 <span class="phone">Phone: </span>
-                <span class="phone-val">111-222-3333</span>
+                <span class="phone-val">0987123569</span>
             </div>
 
             <div>
@@ -327,7 +327,7 @@
                 </div>
                 <div class="section__list">
                     <div class="section__list-item">
-                        Football, programming.
+                        Tennis, programming.
                     </div>
                 </div>
             </div>
