--- a/John.html
+++ b/John.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<!-- 
-    Reference: 
+<!--
+    Reference:
     https://codepen.io/knaman2609/pen/Zbyjvv
-    https://pixabay.com/illustrations/donald-trump-america-president-5103361/ 
+    https://pixabay.com/illustrations/donald-trump-america-president-5103361/
 -->
 
 <head>
@@ -170,8 +170,8 @@
     <div class="container">
         <div class="header">
             <div class="full-name">
-                <span class="first-name">John</span>
-                <span class="last-name">Doe</span>
+                <span class="first-name">usagi</span>
+                <span class="last-name">chen</span>
             </div>
             <div class="contact-info">
                 <span class="email">Email: </span>
@@ -182,13 +182,15 @@
             </div>
 
             <div>
-                <img src="donald-5103361_960_720.png" width="60%">
+                <img src="88953.jpg" width="60%">
             </div>
 
             <div class="about">
                 <span class="position">Front-End Developer </span>
                 <span class="desc">
-                    I am a <b>front-end developer</b> with more than 3 years of experience writing html, css, and js. <br> I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
+                    I am a <b>front-end developer</b> with more than 3 years of experience writing html, css, and js.
+                    <br> I'm motivated, result-focused and seeking a successful team-oriented company with opportunity
+                    to grow.
                 </span>
             </div>
         </div>
