--- a/John.html
+++ b/John.html
@@ -188,7 +188,9 @@
             <div class="about">
                 <span class="position">Front-End Developer </span>
                 <span class="desc">
-                    I am a <b>front-end developer</b> with more than 3 years of experience writing html, css, and js. <br> I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
+                    I am a <b>front-end developer</b> with more than 3 years of experience writing html, css, and js.
+                    <br> I'm motivated, result-focused and seeking a successful team-oriented company with opportunity
+                    to grow.
                 </span>
             </div>
         </div>
@@ -258,14 +260,6 @@
                         <div class="text">I am a front-end developer with more than 3 years of experience writing html,
                             css, and js. I'm motivated, result-focused and seeking a successful team-oriented company
                             with opportunity to grow.</div>
-                    </div>
-
-                    <div class="section__list-item">
-                        <div class="name">DSP</div>
-                        <div class="text">I am a front-end developer with more than 3 years of experience writing html,
-                            css, and js. I'm motivated, result-focused and seeking a successful team-oriented company
-                            with opportunity to grow. <a href="/login">link</a>
-                        </div>
                     </div>
                 </div>
             </div>
