--- a/John.html
+++ b/John.html
@@ -11,8 +11,8 @@
     <title>Resume: Joe</title>
     <style>
         * {
-            margin: 0;
-            padding: 0;
+            margin: 10;
+            padding: 10;
             box-sizing: border-box;
         }
 
@@ -52,11 +52,11 @@
         }
 
         .first-name {
-            font-weight: 700;
+            font-weight: 100;
         }
 
         .last-name {
-            font-weight: 300;
+            font-weight: 100;
         }
 
         .contact-info {
@@ -77,7 +77,6 @@
         }
 
         .position {
-            font-weight: bold;
             display: inline-block;
             margin-right: 10px;
             text-decoration: underline;
@@ -132,7 +131,7 @@
 
         a {
             text-decoration: none;
-            color: #000;
+            color: #d62424;
             font-style: italic;
         }
 
@@ -159,7 +158,7 @@
         }
 
         input:checked+label {
-            background: #79A9CE;
+            background: #081927;
         }
     </style>
 </head>
