--- a/John.html
+++ b/John.html
@@ -170,19 +170,20 @@
     <div class="container">
         <div class="header">
             <div class="full-name">
-                <span class="first-name">John</span>
-                <span class="last-name">Doe</span>
+                <span class="first-name">張</span>
+                <span class="last-name">晉源</span>
             </div>
             <div class="contact-info">
                 <span class="email">Email: </span>
-                <span class="email-val">john.doe@gmail.com</span>
+                <span class="email-val">scott680313@gmail.com</span>
                 <span class="separator"></span>
                 <span class="phone">Phone: </span>
-                <span class="phone-val">111-222-3333</span>
+                <span class="phone-val">0976869472
+                </span>
             </div>
 
             <div>
-                <img src="donald-5103361_960_720.png" width="60%">
+                <img src="p1.png" width="60%">
             </div>
 
             <div class="about">
