--- a/John.html
+++ b/John.html
@@ -8,11 +8,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Resume: Joe</title>
+    <title>Resume: John</title>
     <style>
         * {
-            margin: 0;
-            padding: 0;
+            margin: 10;
+            padding: 10;
             box-sizing: border-box;
         }
 
@@ -32,7 +32,7 @@
         }
 
         .container {
-            max-width: 700px;
+            max-width: 300px;
             background: #fff;
             margin: 0px auto 0px;
             box-shadow: 1px 1px 2px #DAD7D7;
