--- a/John.html
+++ b/John.html
@@ -170,12 +170,12 @@
     <div class="container">
         <div class="header">
             <div class="full-name">
-                <span class="first-name">John</span>
-                <span class="last-name">Doe</span>
+                <span class="first-name">Yi long</span>
+                <span class="last-name">Ma</span>
             </div>
             <div class="contact-info">
                 <span class="email">Email: </span>
-                <span class="email-val">john.doe@gmail.com</span>
+                <span class="email-val">yilong.ma@gmail.com</span>
                 <span class="separator"></span>
                 <span class="phone">Phone: </span>
                 <span class="phone-val">111-222-3333</span>
