--- a/John.html
+++ b/John.html
@@ -153,7 +153,7 @@
             display: inline-block;
             width: 20px;
             height: 20px;
-            background: #C3DEF3;
+            background: #f3c3c3;
             border-radius: 20px;
             margin-right: 3px;
         }
