--- a/John.html
+++ b/John.html
@@ -22,7 +22,7 @@
 
         body {
             min-height: 100%;
-            background: #eee;
+            background: #ffcbcb;
             font-family: 'Lato', sans-serif;
             font-weight: 400;
             color: #222;
