--- a/John.html
+++ b/John.html
@@ -35,10 +35,11 @@
             max-width: 700px;
             background: #fff;
             margin: 0px auto 0px;
-            box-shadow: 1px 1px 2px #DAD7D7;
+            box-shadow: 1px 1px 2px rgba(17, 16, 16, 0.185);
             border-radius: 3px;
             padding: 40px;
             margin-top: 50px;
+            background-color: #dae454;
         }
 
         .header {
