--- a/John.html
+++ b/John.html
@@ -156,6 +156,7 @@
             background: #C3DEF3;
             border-radius: 20px;
             margin-right: 3px;
+            cursor: pointer;
         }
 
         input:checked+label {
@@ -303,19 +304,19 @@
                             CSS</div>
                     </div>
                     <div class="right">
-                        <input id="ck1" type="checkbox" checked />
+                        <input id="ck6" type="checkbox" checked />
 
-                        <label for="ck1"></label>
-                        <input id="ck2" type="checkbox" checked />
+                        <label for="ck6"></label>
+                        <input id="ck7" type="checkbox" checked />
 
-                        <label for="ck2"></label>
-                        <input id="ck3" type="checkbox" />
+                        <label for="ck7"></label>
+                        <input id="ck8" type="checkbox" />
 
-                        <label for="ck3"></label>
-                        <input id="ck4" type="checkbox" />
-                        <label for="ck4"></label>
-                        <input id="ck5" type="checkbox" />
-                        <label for="ck5"></label>
+                        <label for="ck8"></label>
+                        <input id="ck9" type="checkbox" />
+                        <label for="ck9"></label>
+                        <input id="ck10" type="checkbox" />
+                        <label for="ck10"></label>
 
                     </div>
                 </div>
