add new Contact info

--- a/John.html
+++ b/John.html
@@ -179,6 +179,9 @@
                 <span class="separator"></span>
                 <span class="phone">Phone: </span>
                 <span class="phone-val">111-222-3333</span>
+                <span class="separator"></span>
+                <span class="phone">Instagram: </span>
+                <span class="phone-val"><a href="https://www.instagram.com/realdonaldtrump/">realdonaldtrump</a></span>
             </div>
 
             <div>
@@ -188,7 +191,9 @@
             <div class="about">
                 <span class="position">Front-End Developer </span>
                 <span class="desc">
-                    I am a <b>front-end developer</b> with more than 3 years of experience writing html, css, and js. <br> I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
+                    I am a <b>front-end developer</b> with more than 3 years of experience writing html, css, and js.
+                    <br> I'm motivated, result-focused and seeking a successful team-oriented company with opportunity
+                    to grow.
                 </span>
             </div>
         </div>
