--- a/John.html
+++ b/John.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Resume: Joe</title>
+    <title>Joe</title>
     <style>
         * {
             margin: 0;
@@ -181,9 +181,7 @@
                 <span class="phone-val">111-222-3333</span>
             </div>
 
-            <div>
-                <img src="donald-5103361_960_720.png" width="60%">
-            </div>
+            
 
             <div class="about">
                 <span class="position">Front-End Developer </span>
