--- a/John.html
+++ b/John.html
@@ -22,10 +22,10 @@
 
         body {
             min-height: 100%;
-            background: #eee;
+            background: #671c1c;
             font-family: 'Lato', sans-serif;
             font-weight: 400;
-            color: #222;
+            color: #b52323;
             font-size: 14px;
             line-height: 26px;
             padding-bottom: 50px;
