--- a/John.html
+++ b/John.html
@@ -327,7 +327,7 @@
                 </div>
                 <div class="section__list">
                     <div class="section__list-item">
-                        Football, programming.
+                        Football, programming, cooking.
                     </div>
                 </div>
             </div>
