--- a/John.html
+++ b/John.html
@@ -22,7 +22,7 @@
 
         body {
             min-height: 100%;
-            background: #eee;
+            background: rgba(250, 191, 53, 0.415);
             font-family: 'Lato', sans-serif;
             font-weight: 400;
             color: #222;
@@ -33,7 +33,7 @@
 
         .container {
             max-width: 700px;
-            background: #fff;
+            background: rgb(227, 142, 30);
             margin: 0px auto 0px;
             box-shadow: 1px 1px 2px #DAD7D7;
             border-radius: 3px;
@@ -97,7 +97,7 @@
 
         .section__title {
             letter-spacing: 2px;
-            color: #54AFE4;
+            color: #7cc4ee;
             font-weight: bold;
             margin-bottom: 10px;
             text-transform: uppercase;
