--- a/John.html
+++ b/John.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Resume: Joe</title>
+    <title>Hello: Joe</title>
     <style>
         * {
             margin: 0;
