--- a/John.html
+++ b/John.html
@@ -182,7 +182,7 @@
             </div>
 
             <div>
-                <img src="donald-5103361_960_720.png" width="60%">
+                <img src="sus.png" width="60%">
             </div>
 
             <div class="about">
