--- a/John.html
+++ b/John.html
@@ -170,8 +170,8 @@
     <div class="container">
         <div class="header">
             <div class="full-name">
-                <span class="first-name">John</span>
-                <span class="last-name">Doe</span>
+                <span class="first-name">Albert</span>
+                <span class="last-name">Ma</span>
             </div>
             <div class="contact-info">
                 <span class="email">Email: </span>
