--- a/John.html
+++ b/John.html
@@ -22,7 +22,7 @@
 
         body {
             min-height: 100%;
-            background: #eee;
+            background: blanchedalmond;
             font-family: 'Lato', sans-serif;
             font-weight: 400;
             color: #222;
@@ -275,7 +275,7 @@
                     <div class="skills__item">
                         <div class="left">
                             <div class="name">
-                                Javascript
+                                Python
                             </div>
                         </div>
                         <div class="right">
@@ -300,7 +300,7 @@
                 <div class="skills__item">
                     <div class="left">
                         <div class="name">
-                            CSS</div>
+                            Dance</div>
                     </div>
                     <div class="right">
                         <input id="ck1" type="checkbox" checked />
