change section_title color

--- a/John.html
+++ b/John.html
@@ -97,7 +97,7 @@
 
         .section__title {
             letter-spacing: 2px;
-            color: #54AFE4;
+            color: #9254e4;
             font-weight: bold;
             margin-bottom: 10px;
             text-transform: uppercase;
