feat: Correct interests

--- a/John.html
+++ b/John.html
@@ -327,7 +327,7 @@
                 </div>
                 <div class="section__list">
                     <div class="section__list-item">
-                        Football, programming.
+                        Programing is the only thing I do in my long life, Programing to dead Wahaha
                     </div>
                 </div>
             </div>
